# google-adk-agentic-development-kit

./: .gitIgnore  pyproject.toml
src/google_adk/: __init__.py
