[project]
name = "google-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ahmedashfaq850", email = "ahmedashfaq6777@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
google-adk = "google_adk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
